--- a/framework/Info.plist
+++ b/framework/Info.plist
@@ -20,10 +20,6 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -39,5 +35,30 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>UIApplicationShortcutItems</key>
+    <array>
+        <dict>
+            <key>UIApplicationShortcutItemIconType</key>
+            <string>UIApplicationShortcutIconTypeShare</string>
+            <key>UIApplicationShortcutItemTitle</key>
+            <string>分享</string>
+            <key>UIApplicationShortcutItemSubtitle</key>
+            <string>喜欢就分享吧</string>
+            <key>UIApplicationShortcutItemType</key>
+            <string>ShortCutShare</string>
+        </dict>
+        <dict>
+            <key>UIApplicationShortcutItemType</key>
+            <string>ShortCutOpen</string>
+            <key>UIApplicationShortcutItemSubtitle</key>
+            <string>点击打开App</string>
+            <key>UIApplicationShortcutItemTitle</key>
+            <string>打开</string>
+            <key>UIApplicationShortcutItemIconType</key>
+            <string>UIApplicationShortcutIconTypeHome</string>
+        </dict>
+    </array>
+
+
 </dict>
 </plist>
