add system face detect and ifly online face detect

--- a/framework/Info.plist
+++ b/framework/Info.plist
@@ -59,6 +59,12 @@
         </dict>
     </array>
 
-
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>此 App 需要您的同意才能读取媒体资料库</string>
+    <key>NSCameraUsageDescription</key>
+    <string>此 App 需要您的同意才能打开相机</string>
+    <key>NSAppTransportSecurity</key> <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/> </dict>
 </dict>
 </plist>
