--- a/framework/Info.plist
+++ b/framework/Info.plist
@@ -74,6 +74,9 @@
 	<string>此 App 需要您的同意才能打开相机</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>此 App 需要您的同意才能读取媒体资料库</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>此 App 需要您的同意,才能保存图片到您的相册</string>
+    
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
