--- a/framework/Info.plist
+++ b/framework/Info.plist
@@ -32,7 +32,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
@@ -71,15 +71,17 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>此 App 需要您的同意才能打开相机</string>
+	<string>"智慧家"需要您的同意才能打开相机</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>此 App 需要您的同意,才能获取您的小区位置信息</string>
+	<string>"智慧家"需要您的同意,才能获取您的小区位置信息</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>此 App 需要您的同意,才能获取您的小区位置信息</string>
+	<string>"智慧家"需要您的同意,才能获取您的小区位置信息</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>智慧家"需要您的同意,才能打开麦克风权限</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>此 App 需要您的同意,才能保存图片到您的相册</string>
+	<string>"智慧家"需要您的同意,才能保存图片到您的相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>此 App 需要您的同意才能读取媒体资料库</string>
+	<string>"智慧家"需要您的同意,才能读取媒体资料库</string>
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
