--- a/framework/Info.plist
+++ b/framework/Info.plist
@@ -71,29 +71,19 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>"智慧家"需要您的同意才能打开相机</string>
+	<string>&quot;智慧家&quot;需要您的同意才能打开相机</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能获取您的小区位置信息</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能获取您的小区位置信息</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能获取您的小区位置信息</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能获取您的小区位置信息</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>智慧家"需要您的同意,才能打开麦克风权限</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能打开麦克风权限</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能保存图片到您的相册</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能保存图片到您的相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能读取媒体资料库</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能读取媒体资料库</string>
 	<key>UIApplicationShortcutItems</key>
 	<array>
-		<dict>
-			<key>UIApplicationShortcutItemIconType</key>
-			<string>UIApplicationShortcutIconTypeShare</string>
-			<key>UIApplicationShortcutItemSubtitle</key>
-			<string>喜欢就分享吧</string>
-			<key>UIApplicationShortcutItemTitle</key>
-			<string>分享</string>
-			<key>UIApplicationShortcutItemType</key>
-			<string>ShortCutShare</string>
-		</dict>
 		<dict>
 			<key>UIApplicationShortcutItemIconType</key>
 			<string>UIApplicationShortcutIconTypeHome</string>
