--- a/framework/Info.plist
+++ b/framework/Info.plist
@@ -30,6 +30,14 @@
 				<string>wxbc2d656f23e6c0f1</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>prefs</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>2</string>
@@ -71,17 +79,17 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>"智慧家"需要您的同意才能打开相机</string>
+	<string>&quot;智慧家&quot;需要您的同意才能打开相机</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能获取您的小区位置信息</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能获取您的小区位置信息</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能获取您的小区位置信息</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能获取您的小区位置信息</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能打开麦克风权限</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能打开麦克风权限</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能保存图片到您的相册</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能保存图片到您的相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>"智慧家"需要您的同意,才能读取媒体资料库</string>
+	<string>&quot;智慧家&quot;需要您的同意,才能读取媒体资料库</string>
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
@@ -99,6 +107,7 @@
 	<array>
 		<string>audio</string>
 		<string>remote-notification</string>
+		<string>voip</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
